correction z-index de la nav pour section myjourney

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -178,7 +178,7 @@ li{
     top: 0;
     left: 0;
     width: 100%;
-    z-index: 1;
+    z-index: 25;
     
 }
 
@@ -191,7 +191,7 @@ li{
     pointer-events: none;
     -webkit-clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 100%);
             clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 100%);
-    z-index: 1;
+    z-index: 25;
 
 }
 
